fixed sound align

--- a/assets/css/sound.css
+++ b/assets/css/sound.css
@@ -100,7 +100,7 @@ p {
 }
 
 .spotifyButton {
-    transform: translate(24%,250%);
+    transform: translate(26.45%,250%);
 }
 
 
